<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">


                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="new DataBinding Feature">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />

                </CheckBox>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="new DataBinding Feature">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />

                </CheckBox>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo1" />

                <TextView
                    android:id="@+id/test"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sample">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </Button>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo3" />

                <TextView
                    android:id="@+id/test2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_4" />

                <CheckBox
                    android:id="@+id/cb1"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </CheckBox>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo5" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample">

                    <!--                    <tag-->
                    <!--                        android:id="@id/log_tag"-->
                    <!--                        android:value="测试log tag" />-->

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />

                    <tag
                        android:id="@id/i3"
                        android:value="@string/app_name" />
                </CheckBox>
            </LinearLayout>

            <!--            btn_style.main-->
            <!--                daVinCiBgStyle="@{AppDaVinCiStyles.btn_style_main}"-->
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_test_factory"
                        daVinCiStyle="@{`btn_style.main`}"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:text="@string/n_enable" />

                    <TextView
                        android:id="@+id/tv_test_factory2"
                        daVinCiStyle="@{`btn_style.main`}"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/style_factory" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>