<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="osp.leobert.android.davinci.DaVinCiExpression" />

        <import type="osp.leobert.android.davinci.State" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                daVinCi_bg="@{DaVinCiExpression.shape().solid(`#f0f0f0`).stroke(`1`,`#eaeaea`).corner(`3dp`)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                app:binding_mark="true">

                <FrameLayout
                    daVinCi_bg="@{DaVinCiExpression.shape().solid(`#f0f0f0`).stroke(`1`,`#eaeaea`).corner(`3dp`)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:binding_mark="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:minHeight="80dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_test_factory"
                            daVinCiStyle="@{`btn_style.main`}"
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/n_enable"
                            app:binding_mark="true" />

                        <TextView
                            android:id="@+id/tv_test_factory2"
                            daVinCiStyle="@{`btn_style.main`}"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:minHeight="80dp"
                            android:text="该样式参考DemoStyle1"
                            app:binding_mark="true" />

                        <TextView
                            android:id="@+id/tv_test_factory3"
                            daVinCiStyle="@{`btn_style.sub`}"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/style_factory"
                            app:binding_mark="true" />
                    </LinearLayout>
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_007_demo2" />


                <CheckBox
                    daVinCi_bg1="@{DaVinCiExpression.shape().corner(60).solid(`@i1`).stroke(`4dp`,`@i2`)}"
                    daVinCi_bg2="@{DaVinCiExpression.shape().corner(60).solid(`@i2`).stroke(`4dp`,`@i1`)}"
                    states1="@{State.array(State.CHECKED_T)}"
                    states2="@{State.array(State.CHECKED_F,State.ENABLE_T)}"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/add_at_0_0_7"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />

                </CheckBox>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/_007_demo1" />

                <CheckBox
                    daVinCi_bg1="@{DaVinCiExpression.shape().states(State.CHECKED_T).corner(60).solid(`@i1`).stroke(`4dp`,`@i2`)}"
                    daVinCi_bg2="@{DaVinCiExpression.shape().states(State.CHECKED_F,State.ENABLE_T).corner(60).solid(`@i2`).stroke(`4dp`,`@i1`)}"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/add_at_0_0_7"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />

                </CheckBox>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />

            <LinearLayout
                daVinCi_bg="@{DaVinCiExpression.shape().solid(`#f0f0f0`).stroke(`1`,`#eaeaea`).corner(`3dp`)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                app:binding_mark="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo1" />

                <TextView
                    android:id="@+id/test"
                    daVinCi_bg="@{DaVinCiExpression.shape().corner(60).solid(`@i2`).stroke(`4dp`,`@i2`)}"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                daVinCi_bg="@{DaVinCiExpression.shape().solid(`#f0f0f0`).stroke(`1`,`#eaeaea`).corner(`3dp`)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                app:binding_mark="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo2" />

                <Button
                    daVinCi_bg_pressed="@{DaVinCiExpression.shape().corner(`10dp,15dp,20dp,30dp`).stroke(`4dp`,`@i2`).gradient(`#26262a`,`#ff0699`,0)}"
                    daVinCi_bg_unpressed="@{DaVinCiExpression.shape().corner(60).solid(`@i1`).stroke(`4dp`,`@i2`)}"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sample"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </Button>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                daVinCi_bg="@{DaVinCiExpression.shape().solid(`#f0f0f0`).stroke(`1`,`#eaeaea`).corner(`3dp`)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                app:binding_mark="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo3" />

                <TextView
                    android:id="@+id/tv_demo3"
                    daVinCi_bg="@{DaVinCiExpression.shape().corner(`10dp,15dp,20dp,30dp`).stroke(`4dp`,`@i2`).gradient(`#26262a`,`#ff0699`,0)}"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                daVinCi_bg="@{DaVinCiExpression.shape().solid(`#f0f0f0`).stroke(`1`,`#eaeaea`).corner(`3dp`)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                app:binding_mark="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_4" />

                <CheckBox
                    android:id="@+id/cb1"
                    daVinCi_bg="@{DaVinCiExpression.shape().corner(60).solid(`@i2`).stroke(`4dp`,`@i2`)}"
                    daVinCi_bg_pressed="@{DaVinCiExpression.shape().corner(`10dp,15dp,20dp,30dp`).stroke(`4dp`,`@i2`).gradient(`#26262a`,`#ff0699`,0)}"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </CheckBox>

                <TextView
                    android:id="@+id/tv_demo4_2"
                    daVinCi_bg1="@{DaVinCiExpression.shape().states(State.ENABLE_T).corner(60).solid(`@i2`).stroke(`4dp`,`@i1`)}"
                    daVinCi_bg2="@{DaVinCiExpression.shape().states(State.PRESSED_T,State.ENABLE_T).corner(`10dp,15dp,20dp,30dp`).stroke(`4dp`,`@i2`).gradient(`#26262a`,`#ff0699`,0)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/demo_4_2"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </TextView>

                <Button
                    daVinCi_bg1="@{DaVinCiExpression.shape().corner(`10dp,15dp,20dp,30dp`).stroke(`4dp`,`@i2`).gradient(`#26262a`,`#ff0699`,0)}"
                    daVinCi_bg2="@{DaVinCiExpression.shape().states(State.ENABLE_T).corner(60).solid(`@i2`).stroke(`4dp`,`@i1`)}"
                    states1="@{State.array(State.PRESSED_T,State.ENABLE_T)}"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />
                </Button>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />


            <LinearLayout
                daVinCi_bg="@{DaVinCiExpression.shape().solid(`#f0f0f0`).stroke(`1`,`#eaeaea`).corner(`3dp`)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                app:binding_mark="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo5" />

                <CheckBox
                    daVinCi_bg_checked="@{DaVinCiExpression.shape().corner(60).solid(`@i2`).stroke(`4dp`,`@i2`)}"
                    daVinCi_bg_unchecked="@{DaVinCiExpression.shape().corner(`10dp,15dp,20dp,30dp`).stroke(`4dp`,`@i2`).gradient(`#26262a`,`#ff0699`,0)}"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/test"
                    android:gravity="center"
                    android:text="@string/sample"
                    app:binding_mark="true">

                    <tag
                        android:id="@id/i1"
                        android:value="@color/colorPrimaryDark" />

                    <tag
                        android:id="@id/i2"
                        android:value="@color/colorAccent" />

                    <tag
                        android:id="@id/i3"
                        android:value="@string/app_name" />
                </CheckBox>
            </LinearLayout>

            <!--            btn_style.main-->
            <!--                daVinCiBgStyle="@{AppDaVinCiStyles.btn_style_main}"-->
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>